--- a/index.css
+++ b/index.css
@@ -261,3 +261,33 @@ footer a {
     }
   }
   
+
+  /* .skills-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+}
+
+.skill {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 2rem;
+    animation: fadeInUp 1s ease-in-out;
+}
+
+.skill p {
+    margin-top: 10px;
+    font-size: 1rem;
+}
+
+.icon {
+    width: 64px;
+    height: 64px;
+}
+
+.skill img {
+    width: 64px;
+    height: 64px;
+} */
